@@ -25748,21 +25748,15 @@ invalid_nontype_parm_type_p (tree type, tsubst_flags_t complain)
 	return false;
       if (!complete_type_or_else (type, NULL_TREE))
 	return true;
-      if (!literal_type_p (type))
+      if (!structural_type_p (type))
 	{
-	  error ("%qT is not a valid type for a template non-type parameter "
-		 "because it is not literal", type);
-	  explain_non_literal_class (type);
+	  auto_diagnostic_group d;
+	  if (complain & tf_error)
+	    error ("%qT is not a valid type for a template non-type parameter "
+		   "because it is not structural", type);
+	  structural_type_p (type, true);
 	  return true;
 	}
-      if (cp_has_mutable_p (type))
-	{
-	  error ("%qT is not a valid type for a template non-type parameter "
-		 "because it has a mutable member", type);
-	  return true;
-	}
-      /* FIXME check op<=> and strong structural equality once spaceship is
-	 implemented.  */
       return false;
     }
 
